--- a/tp1/style.css
+++ b/tp1/style.css
@@ -1,6 +1,7 @@
 /*  ------  CSS GENERAL PARA TODOS LOS .HTML    ------*/
 html, body{
-    background-color: rgb(238, 255, 250);
+    background-color: rgb(2, 255, 183);
+    background-size: 100%;
     margin: 0%;
     height: 100%;
 }
@@ -14,8 +15,9 @@ body{
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    background-color: rgb(133, 187, 169);
+    background-color: rgb(0, 0, 0);
     padding: 10px 20px;
+    color: white;
 }
 h1{
     flex: 1 1 100%;
@@ -32,7 +34,7 @@ h1{
 .link_header{
     text-decoration: none;
     padding: 10px;
-    color: black;
+    color: rgb(252, 250, 250);
     font-weight: bold;
 }
 .link_header:hover, 
@@ -168,8 +170,24 @@ p, ol{
 }
 /*  ------ HTML LISTA   ------  */
 table{
-    text-align: center;
+    width: 100%;
     margin: 50px 0 10px 0;
+}
+tr {
+td{
+    border: 5px solid;
+    border-color: rgb(248, 255, 48);
+    margin-left: 20%;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+th{
+    border: 5px solid;
+    color: rgb(242, 255, 3);
+    margin-left: 20%;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 }
 .imagen{
     width: 50px;
