--- a/Trabajo_intregrador/OfStyel/Scss/SassList/SassList.css
+++ b/Trabajo_intregrador/OfStyel/Scss/SassList/SassList.css
@@ -12,13 +12,56 @@ header {
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
   border-radius: 1.5rem;
 }
-header .logo {
+header h1 {
+  width: auto;
+  text-align: center;
+  margin-left: 25px;
+}
+header .opciones {
+  width: auto;
+  text-align: right;
+  margin-left: 70%;
+  margin-right: 5%;
+}
+
+.logo {
   margin: 20px;
   height: 70px;
   width: auto;
   border-radius: 50%;
 }
-header h1 {
-  margin: 20px;
-  text-align: center;
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 2rem;
+}
+
+.Contenedor {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  background: linear-gradient(to bottom, rgb(164, 163, 163), rgb(63, 63, 63));
+  box-shadow: 0 8px 20px black;
+  border-radius: 1.5rem;
+  max-width: fit-content;
+  margin-top: 2rem;
+  padding: 2rem;
+}
+.Contenedor img {
+  height: 150px;
+  width: auto;
+}
+
+footer {
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
+  border-radius: 1.5rem;
+}
+
+.page-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }/*# sourceMappingURL=SassList.css.map */
