--- a/Trabajo_intregrador/Sass/style.css
+++ b/Trabajo_intregrador/Sass/style.css
@@ -31,13 +31,15 @@
 .carousel-inner img {
   height: 100%;
   width: 100%;
-  object-fit: cover; /* recorta la imagen manteniendo proporción sin deformarla */
+  -o-object-fit: cover;
+     object-fit: cover; /* recorta la imagen manteniendo proporción sin deformarla */
 }
 
 .card-img-top {
   width: 100%;
   height: 200px;
-  object-fit: cover; /* recorta la imagen manteniendo proporción sin deformarla */
+  -o-object-fit: cover;
+     object-fit: cover; /* recorta la imagen manteniendo proporción sin deformarla */
 }
 
 footer {
