--- a/Trabajo_intregrador/OfStyel/Scss/SassList/SassList.css
+++ b/Trabajo_intregrador/OfStyel/Scss/SassList/SassList.css
@@ -2,15 +2,24 @@ body {
   background: linear-gradient(to bottom, white, blue);
   background-repeat: no-repeat;
   background-attachment: fixed;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 header {
+  position: fixed;
+  top: 0;
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 2rem;
+  width: 95%;
+  padding: 0 2rem;
+  margin-left: 10px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
   border-radius: 1.5rem;
+  background: linear-gradient(to left, rgb(0, 175, 137), rgb(72, 0, 72));
 }
 header h1 {
   width: auto;
@@ -33,21 +42,27 @@ header .opciones {
 
 main {
   display: flex;
+  align-items: center;
   flex-wrap: wrap;
   flex-direction: row;
   gap: 2rem;
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .Contenedor {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
   background: linear-gradient(to bottom, rgb(164, 163, 163), rgb(63, 63, 63));
   box-shadow: 0 8px 20px black;
   border-radius: 1.5rem;
   max-width: fit-content;
   margin-top: 2rem;
+  margin-left: 20px;
   padding: 2rem;
 }
 .Contenedor img {
@@ -56,12 +71,30 @@ main {
 }
 
 footer {
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
+  gap: 50%;
+  width: 95%;
+  padding: 0 2rem;
+  margin-left: 10px;
+  align-items: center;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
   border-radius: 1.5rem;
+  background: linear-gradient(to right, red, rgb(72, 0, 72));
+}
+footer a {
+  margin-left: 20px;
 }
 
-.page-wrapper {
+.linklist {
   display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+  flex-direction: row;
+}
+.linklist img {
+  margin: 20px;
+  height: 50px;
+  width: auto;
+  border-radius: 50%;
 }/*# sourceMappingURL=SassList.css.map */
