--- a/Trabajo_intregrador/OfStyel/Scss/Sass_Carga.css
+++ b/Trabajo_intregrador/OfStyel/Scss/Sass_Carga.css
@@ -43,14 +43,16 @@ nav {
 .box1 {
   display: inline-block;
   border: 5px solid gray;
-  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px);
+          backdrop-filter: blur(7px);
   padding: 20px;
 }
 
 .box2 {
   display: inline-flex;
   border: 5px solid gray;
-  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px);
+          backdrop-filter: blur(7px);
   padding: 17px;
 }
 
