--- a/Trabajo_intregrador/Sass/_variables.scss
+++ b/Trabajo_intregrador/Sass/_variables.scss
@@ -1,6 +1,7 @@
-// Paleta base, que se debe cambiar
-$color-primario: #007bff;   // Azul
-$color-secundario: #00c6ff; // Celeste
+//  Paleta base de Home.html
+$color-primario: #007bff;   
+$color-secundario: #00c6ff;
+$color-primario-footer: #46d3f7;
+$color-secundario-footer: #23b4c7;
 
-$color-primario-footer: #7d51f7;   // Azul
-$color-secundario-footer: #ca92f8; // Celeste
+//  ----------------
