--- a/Trabajo_intregrador/Sass/home.css
+++ b/Trabajo_intregrador/Sass/home.css
@@ -23,10 +23,52 @@
   background-color: antiquewhite;
 }
 
+h2 {
+  color: rgb(162, 212, 255);
+}
+
+.nav-link {
+  color: antiquewhite;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+
 .carousel-inner img {
   width: 100%;
 }
 
+.card-link {
+  text-decoration: none;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.contact-sect {
+  background-color: rgb(220, 241, 250);
+  border-radius: 15px;
+  padding-bottom: 10px;
+}
+
 footer {
-  background: linear-gradient(45deg, #7d51f7, #ca92f8);
+  background: linear-gradient(45deg, #46d3f7, #23b4c7);
+}
+
+.text-muted {
+  font-weight: bold;
+}
+
+.footer-link {
+  text-decoration: none;
+  color: antiquewhite;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+
+.footer-link:hover {
+  color: black;
 }/*# sourceMappingURL=home.css.map */
