ahora si finiquitiado

--- a/Trabajo_intregrador/Sass/carga.css
+++ b/Trabajo_intregrador/Sass/carga.css
@@ -87,4 +87,4 @@ body {
     display: flex;
     justify-content: center;
   }
-}/*# sourceMappingURL=Sass_Carga.css.map */
+}/*# sourceMappingURL=carga.css.map */
