--- a/Trabajo_intregrador/Sass/home.scss
+++ b/Trabajo_intregrador/Sass/home.scss
@@ -45,6 +45,8 @@ h2{
     background-color: rgb(220, 241, 250);
     border-radius: 15px;
     padding-bottom: 10px;
+    height: auto;
+    align-self: flex-start;
 }
 footer{
     @include fondo-degradado($color-primario-footer, $color-secundario-footer, 45deg);
