--- a/Trabajo_intregrador/Sass/_variables.scss
+++ b/Trabajo_intregrador/Sass/_variables.scss
@@ -5,3 +5,9 @@ $color-primario-footer: #46d3f7;
 $color-secundario-footer: #23b4c7;
 
 //  ----------------
+
+// Paleta base de Carga.html (solo header).
+$color-pri-carga: #00ff88ee;
+$color-sec-carga: #1bc1f8;
+
+// -----------------
