--- a/Trabajo_intregrador/OfStyel/Scss/SassList/SassList.css
+++ b/Trabajo_intregrador/OfStyel/Scss/SassList/SassList.css
@@ -1,101 +1,63 @@
 body {
   background: linear-gradient(to bottom, white, blue);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+  min-height: 100vh;
 }
 
-header {
-  position: fixed;
-  top: 0;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 2rem;
-  width: 95%;
-  padding: 0 2rem;
-  margin-left: 10px;
+header,
+footer {
+  background: linear-gradient(to left, rgb(0, 175, 137), rgb(72, 0, 72));
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
   border-radius: 1.5rem;
-  background: linear-gradient(to left, rgb(0, 175, 137), rgb(72, 0, 72));
-}
-header h1 {
-  width: auto;
-  text-align: center;
-  margin-left: 25px;
-}
-header .opciones {
-  width: auto;
-  text-align: right;
-  margin-left: 70%;
-  margin-right: 5%;
+  padding: 1rem 2rem;
+  margin: 1rem;
+  flex-direction: row;
 }
 
 .logo {
-  margin: 20px;
   height: 70px;
   width: auto;
   border-radius: 50%;
 }
 
-main {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  flex-direction: row;
-  gap: 2rem;
-  width: 90%;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
-
-.Contenedor {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.producto-card {
   background: linear-gradient(to bottom, rgb(164, 163, 163), rgb(63, 63, 63));
   box-shadow: 0 8px 20px black;
   border-radius: 1.5rem;
-  max-width: -moz-fit-content;
-  max-width: fit-content;
-  margin-top: 2rem;
-  margin-left: 20px;
-  padding: 2rem;
-}
-.Contenedor img {
-  height: 150px;
-  width: auto;
+  padding: 1rem;
+  color: white;
 }
 
 footer {
-  position: fixed;
-  bottom: 0;
-  display: flex;
-  flex-direction: row;
-  gap: 50%;
-  width: 95%;
-  padding: 0 2rem;
-  margin-left: 10px;
-  align-items: center;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
-  border-radius: 1.5rem;
   background: linear-gradient(to right, red, rgb(72, 0, 72));
 }
-footer a {
-  margin-left: 20px;
-}
 
-.linklist {
-  display: flex;
-  flex-direction: row;
-}
 .linklist img {
-  margin: 20px;
   height: 50px;
   width: auto;
   border-radius: 50%;
+}
+
+@media (max-width: 576px) {
+  header,
+  footer {
+    flex-direction: column !important;
+    text-align: center;
+    padding: 1rem;
+  }
+  .logo {
+    height: 50px;
+  }
+  h1 {
+    font-size: 1.5rem;
+  }
+  .producto-card {
+    padding: 0.5rem;
+  }
+  .producto-card p {
+    font-size: 0.9rem;
+  }
+  .linklist img {
+    height: 40px;
+    margin: 0 5px;
+  }
 }/*# sourceMappingURL=SassList.css.map */
